# report

./: .gitignore  INSTALL.md  README.md  pyproject.toml  requirements.txt  start-server.sh
api/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
api/management/commands/: seed_db.py
api/migrations/: 0001_initial.py  0002_remove_store_store_id.py  0003_remove_status_day_of_week.py  0004_report.py  0005_remove_report_downtime_last_day_and_more.py  0006_alter_report_task.py  0007_alter_report_file.py
report/: celery.py  settings.py  urls.py
